RESOLVED FIXED123104
Fixing mediastream debug build
https://bugs.webkit.org/show_bug.cgi?id=123104
Summary Fixing mediastream debug build
Thiago de Barros Lacerda
Reported 2013-10-21 11:01:15 PDT
Attachments
Patch (1.62 KB, patch)
2013-10-21 11:04 PDT, Thiago de Barros Lacerda
no flags
Patch (1.70 KB, patch)
2013-10-21 11:34 PDT, Thiago de Barros Lacerda
no flags
Thiago de Barros Lacerda
Comment 1 2013-10-21 11:04:54 PDT
Andreas Kling
Comment 2 2013-10-21 11:06:12 PDT
Comment on attachment 214751 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=214751&action=review > Source/WebCore/Modules/mediastream/RTCDTMFToneChangeEvent.cpp:47 > ASSERT(type == eventNames().tonechangeEvent); If this variable is only used for the assertion, you should change it to an ASSERT_UNUSED.
Thiago de Barros Lacerda
Comment 3 2013-10-21 11:08:30 PDT
(In reply to comment #2) > (From update of attachment 214751 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=214751&action=review > > > Source/WebCore/Modules/mediastream/RTCDTMFToneChangeEvent.cpp:47 > > ASSERT(type == eventNames().tonechangeEvent); > > If this variable is only used for the assertion, you should change it to an ASSERT_UNUSED. Fine
Thiago de Barros Lacerda
Comment 4 2013-10-21 11:34:07 PDT
WebKit Commit Bot
Comment 5 2013-10-21 12:00:56 PDT
Comment on attachment 214758 [details] Patch Clearing flags on attachment: 214758 Committed r157723: <http://trac.webkit.org/changeset/157723>
WebKit Commit Bot
Comment 6 2013-10-21 12:00:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.