Fixing mediastream debug build https://bugs.webkit.org/show_bug.cgi?id=123104

Patch by Thiago de Barros Lacerda <thiago.lacerda@openbossa.org> on 2013-10-21
Reviewed by Andreas Kling.

No new tests needed.

* Modules/mediastream/RTCDTMFToneChangeEvent.cpp:
(WebCore::RTCDTMFToneChangeEvent::create):

Canonical link: https://commits.webkit.org/141184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157723 268f45cc-cd09-0410-ab3c-d52691b4dbfc